# nacos-sdk-rust

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  codecov.yml
examples/: aliyun_ram_app.rs  lazy_app.rs  simple_app.rs  zino_client_app.rs  zino_server_app.rs
nacos-macro/: Cargo.toml
nacos-macro/src/: lib.rs  request.rs  response.rs
nacos-macro/src/message/: mod.rs  request.rs  response.rs
nacos-macros/: Cargo.toml
proto/: nacos_grpc_service.proto
src/: _.rs  lib.rs
src/api/: client_config.rs  config.rs  constants.rs  error.rs  mod.rs  naming.rs  props.rs
src/api/events/: mod.rs
src/api/events/common/: grpc_reconnected_event.rs  mod.rs
src/api/events/naming/: instances_change_event.rs  mod.rs
src/api/plugin/: config_filter.rs  encryption.rs  mod.rs
src/api/plugin/auth/: auth_by_aliyun_ram.rs  auth_by_http.rs  mod.rs
src/common/: error.rs  log.rs  mod.rs  util.rs
src/common/cache/: disk.rs  mod.rs
src/common/error/: mod.rs
src/common/event_bus/: mod.rs
src/common/executor/: mod.rs
src/common/remote/: conn.rs  mod.rs  remote_client.rs  request.rs
src/common/remote/grpc/: bi_channel.rs  config.rs  grpc_client.rs  mod.rs  nacos_grpc_client.rs  nacos_grpc_connection.rs  nacos_grpc_service.rs  server_address.rs  server_list_service.rs  tonic.rs  utils.rs
src/common/remote/grpc/events/: client_init_complete_event.rs  connection_health_check_event.rs  disconnect_event.rs  grpc_connection_health_check_event.rs  grpc_disconnect_event.rs  grpc_reconnected_event.rs  mod.rs  nacos_grpc_client_init_complete_event.rs  reconnected_event.rs  shutdown_event.rs
src/common/remote/grpc/handler/: client_detection_request_handler.rs  default_handler.rs  mod.rs
src/common/remote/grpc/handlers/: client_detection_request_handler.rs  default_handler.rs  mod.rs
src/common/remote/grpc/layers/: auth.rs
src/common/remote/grpc/message/: mod.rs
src/common/remote/grpc/message/request/: client_detection_request.rs  mod.rs  server_check_request.rs  set_up_request.rs
src/common/remote/grpc/message/response/: client_detection_response.rs  error_response.rs  health_check_response.rs  mod.rs  server_check_response.rs
src/common/remote/grpc/subscribers/: connection_health_check_subscriber.rs  grp_connection_health_check_subscriber.rs  grpc_reconnected_subscriber.rs  mod.rs  reconnected_subscriber.rs
src/common/remote/request/: client_request.rs  mod.rs  server_request.rs
src/common/remote/response/: client_response.rs  mod.rs  server_response.rs
src/common/remote/server_list/: mod.rs  provider.rs  service.rs
src/common/util/: mod.rs  payload_helper.rs
src/config/: cache.rs  client_request.rs  client_response.rs  handler.rs  mod.rs  server_request.rs  server_response.rs  util.rs  worker.rs
src/config/message/request/: config_batch_listen_request.rs  config_change_notify_request.rs  config_publish_request.rs  config_query_request.rs  config_remove_request.rs  mod.rs
src/config/message/response/: config_batch_listen_response.rs  config_change_notify_response.rs  config_publish_response.rs  config_query_response.rs  config_remove_response.rs  mod.rs
src/naming/: mod.rs
src/naming/cache/: disk_cache.rs  mod.rs
src/naming/chooser/: mod.rs
src/naming/common/: executor.rs
src/naming/dto/: mod.rs  service_info.rs
src/naming/error/: mod.rs
src/naming/events/: instances_change_event.rs  mod.rs
src/naming/grpc/: client_abilities.rs  grpc_client.rs  grpc_reconnected_subscriber.rs  grpc_service.rs  mod.rs
src/naming/grpc/events/: grpc_connection_health_check_event.rs  grpc_disconnect_event.rs  mod.rs
src/naming/grpc/handler/: default_handler.rs  mod.rs  naming_push_request_handler.rs
src/naming/grpc/message/: mod.rs
src/naming/grpc/message/request/: batch_instance_request.rs  health_check_request.rs  instance_request.rs  mod.rs  notify_subscriber_request.rs  server_check_request.rs  service_list_request.rs  service_query_request.rs  set_up_request.rs  subscribe_service_request.rs
src/naming/grpc/message/response/: batch_instance_response.rs  error_response.rs  health_check_response.rs  instance_response.rs  mod.rs  notify_subscriber_response.rs  query_service_response.rs  server_check_response.rs  service_list_response.rs  subscribe_service_response.rs
src/naming/grpc/subscribers/: grp_connection_health_check_subscriber.rs  grpc_reconnected_subscriber.rs  mod.rs
src/naming/handler/: mod.rs  naming_push_request_handler.rs
src/naming/message/: mod.rs
src/naming/message/request/: batch_instance_request.rs  instance_request.rs  mod.rs  notify_subscriber_request.rs  persistent_instance_request.rs  service_list_request.rs  service_query_request.rs  subscribe_service_request.rs
src/naming/message/response/: batch_instance_response.rs  instance_response.rs  mod.rs  notify_subscriber_response.rs  query_service_response.rs  service_list_response.rs  subscribe_service_response.rs
src/naming/observable/: mod.rs  service_info_diff.rs  service_info_observable.rs
src/naming/redo/: automatic_request.rs  mod.rs
src/naming/redo/automatic_request/: batch_instance_request.rs  instance_request.rs  mod.rs  persistent_instance_request.rs  subscribe_service_request.rs
src/naming/subscribers/: instances_change_event_subscriber.rs  mod.rs  redo_task_disconnect_event_subscriber.rs  redo_task_reconnect_event_subscriber.rs
src/naming/updater/: mod.rs
tests/: config_cache_test.rs  it_auth.rs  it_cache.rs  it_config.rs  it_endpoint.rs  it_naming.rs  proto_build.rs
tests/fixtures/: docker_nacos.rs  externally_managed.rs  mod.rs  rnacos.rs  shared_server.rs
tests/shared/: mod.rs  test_data.rs
