# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "nacos-sdk"
version = "0.2.0"
edition = "2021"
authors = ["nacos-group", "CheirshCai <785427346@qq.com>", "onewe <2583021406@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nacos-sdk/latest"
repository = "https://github.com/nacos-group/nacos-sdk-rust"
homepage = "https://nacos.io"
description = "Nacos client in Rust."
categories = ["network-programming", "development-tools"]
keywords = ["microservices", "config", "naming", "service-discovery", "config-management"]
exclude = [".github", "proto", "tests"]

[workspace]
members = [
    "nacos-macro"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["config", "naming", "auth-by-http"]
config = []
naming = []
auth-by-http = ["reqwest"]

[dependencies]
nacos_macro = { path = "nacos-macro" }
thiserror = "1.0"
tokio = { version = "1.21", features = ["full"] }
#tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
grpcio = { version = "0.12", default-features = false, features = ["prost-codec"] }
prost = "0.11"
prost-types = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
lazy_static = "1.4"
#crossbeam = "0"
#async_once = "0"

#opentelemetry = "0"
tracing = "0.1"
local_ipaddress = "0.1.3"
rand = "0.8.5"
url="2.3.1"

# now only for feature="auth-by-http"
reqwest = { version = "0.11", features = [], optional = true }

[dev-dependencies]
grpcio-compiler = { version = "0.12", default-features = false, features = ["prost-codec"] }
prost-build = "0.11"

tracing-subscriber = { version = "0.3", features = ["default"] }

[[example]]
name = "simple_app"
path = "examples/simple_app.rs"
