# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "nacos-sdk"
version = "0.5.2"
edition = "2024"
authors = ["nacos-group", "CheirshCai <785427346@qq.com>", "onewe <2583021406@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nacos-sdk/latest"
repository = "https://github.com/nacos-group/nacos-sdk-rust"
homepage = "https://nacos.io"
description = "Nacos client in Rust."
categories = ["network-programming", "development-tools"]
keywords = ["microservices", "config", "naming", "service-discovery", "config-management"]
exclude = [".github", "proto", "tests"]

[workspace]
members = [
    "nacos-macro"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["config", "naming", "auth-by-http"]
config = []
naming = []
tls = ["reqwest/default-tls"]
auth-by-http = ["reqwest"]
auth-by-aliyun = ["ring", "base64", "chrono"]

[dependencies]
arc-swap = "1.7"
nacos-macro = { version = "0.2.0", path = "nacos-macro" }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "fs"] }

futures = "0.3"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
local_ipaddress = "0.1.3"
rand = "0.8.5"

# now only for feature="auth-by-http"
reqwest = { version = "0.12", default-features = false, features = [], optional = true }

# only for aliyun-ram-auth
ring = { version = "0.17.8", default-features = false, optional = true }
base64 = { version = "0.22.1", default-features = false, optional = true }
chrono = { version = "0.4", features = ["now"] ,optional = true }

async-trait = "0.1"
async-stream = "0.3.5"
tonic = "0.12"
tower = { version = "0.4.13", features = ["filter", "log"] }
futures-util = "0.3.28"
want = "0.3.0"
dashmap = "5.4.0"
home = "0.5.4"

dotenvy = "0.15"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["default"] }
tonic-build = "0.12"
mockall = { version = "0.11" }


[[example]]
name = "simple_app"
path = "examples/simple_app.rs"

[[example]]
name = "lazy_app"
path = "examples/lazy_app.rs"

[[example]]
name = "aliyun_ram_app"
path = "examples/aliyun_ram_app.rs"
